Added solution for TwoSum problem

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ $RECYCLE.BIN/
 .DS_Store
 
 _NCrunch*
+TheMatrix/.vs/TheMatrix/DesignTimeBuild/.dtbcache.v2
+TheMatrix/.vs/TheMatrix/DesignTimeBuild/.dtbcache.v2
